# dev-env_rust-rocket-elm

./: .gitattributes  .gitignore  README.md  package.json
api/: .env  Cargo.toml
api/migrations/2019-02-26-201617_example_create_posts/: up.sql
api/src/: cors_options.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
app/: brunch-config.js  package.json
app/assets/: app.js  index.html
app/assets/compiled-elm-app/: main.js
app/assets/js/: app.js  compiled-elm-app.js  main.js
app/elm-stuff/0.19.0/: App.elmo  Main.elmi  Main.elmo
app/public/: 404.html  index.html
app/public/js/: app.js.map  app1.js  app1.js.map  compiled-elm-app.js
app/src/: main.elm
