[package]
name = "api"
version = "0.1.0"
authors = ["Dominik Rosser <dominik.rosser@protonmail.ch>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" , default-features = false, features = ["json"] }
rocket_cors =  { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
